# SemantiCAD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  download_model.sh
commands/: mirror.json  none.json  resize.json  rotate.json  translate.json
src/: DebugLog.h  main.cpp
src/core/NLP/: InferenceEngine.cpp  InferenceEngine.h  NLPManager.cpp  NLPManager.h
src/core/NLP/process/: CommandParser.cpp  CommandParser.h  PromptBuilder.cpp  PromptBuilder.h  SemanticIO.cpp  SemanticIO.h
src/core/NLP/scheme/: CommandCatalog.cpp  CommandCatalog.h  CommandSchema.h  DynamicCommandSchema.cpp  DynamicCommandSchema.h
src/core/command/: CommandDispatcher.cpp  CommandDispatcher.h  CommandResult.h  ICommand.h
src/core/command/entity/: CadObject.cpp  CadObject.h
src/core/command/mirror/: MirrorCommand.cpp  MirrorCommand.h  MirrorPlane.cpp  MirrorPlane.h  MirrorService.cpp  MirrorService.h
src/core/command/resize/: ResizeCommand.cpp  ResizeCommand.h  ResizeFactors.cpp  ResizeFactors.h  ResizeService.cpp  ResizeService.h
src/core/command/rotate/: RotateCommand.cpp  RotateCommand.h  RotateService.cpp  RotateService.h  Rotation.cpp  Rotation.h
src/core/command/translate/: TranslateCommand.cpp  TranslateCommand.h  TranslateService.cpp  TranslateService.h  Translation.cpp  Translation.h
src/core/eventbus/: EventBus.h  Events.h
src/core/vtk/: VtkViewer.cpp  VtkViewer.h
src/infrastructure/: MeshLoader.cpp  MeshLoader.h
src/ui/: ChatPanel.cpp  ChatPanel.h  InferenceWorker.cpp  InferenceWorker.h  MainWindow.cpp  MainWindow.h  main_gui.cpp
tests/: CommandDispatcherTest.cpp  CubeFixture.h  MirrorCommandTest.cpp  ResizeCommandTest.cpp  RotateCommandTest.cpp  TranslateCommandTest.cpp
